--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-# OpenAI API Key - Required for generating embeddings
+# OpenAI API Key - Required for generating embeddings and chat completions
 OPENAI_API_KEY="your-openai-api-key-here"
 
 # Perplexity API Key for DeepSearch
@@ -8,13 +8,23 @@ PERPLEXITY_API_KEY=your_perplexity_api_key_here
 NEXT_PUBLIC_APP_URL=http://localhost:3000
 
 # Logging configuration
-LOG_LEVEL=debug
+LOG_LEVEL=info
 ENABLE_REMOTE_LOGGING=false 
 
-# Supabase Configuration - Required for vector search
+# Supabase Configuration - Required for authentication and vector search
 NEXT_PUBLIC_SUPABASE_URL="your-supabase-project-url"
 NEXT_PUBLIC_SUPABASE_ANON_KEY="your-supabase-anon-key"
+SUPABASE_SERVICE_ROLE_KEY="your-supabase-service-role-key" # Only needed for setup script
 
 # Optional Configuration
-NODE_ENV="development"  # or "production"
-VERCEL_REGION="local"   # or your Vercel region
+NODE_ENV="development"  # Set to "production" for production deployment
+VERCEL_REGION="local"   # Set to your Vercel region for production deployment
+
+# Fireworks AI API Key - Optional for alternative models
+FIREWORKS_API_KEY="your-fireworks-api-key-here"
+
+# Application Configuration
+DEFAULT_AGENT="default" # The default agent to use (default, copywriting, google-ads, facebook-ads, quiz)
+ENABLE_DEEP_SEARCH=true # Enable or disable deep search by default
+MAX_DOCUMENTS=10 # Maximum number of documents to retrieve in RAG
+SIMILARITY_THRESHOLD=0.5 # Minimum similarity threshold for RAG
