--- a/package.json
+++ b/package.json
@@ -116,6 +116,8 @@
     "zustand": "^5.0.3"
   },
   "devDependencies": {
+    "@eslint/config-array": "^0.19.2",
+    "@eslint/object-schema": "^2.1.6",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -123,8 +125,10 @@
     "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "15.2.0",
+    "glob": "^11.0.1",
     "open-cli": "^8.0.0",
     "postcss": "^8",
+    "rimraf": "^6.0.1",
     "stylelint": "^16.15.0",
     "stylelint-config-standard": "^37.0.0",
     "supabase": "^2.15.8",
