--- a/.gitignore
+++ b/.gitignore
@@ -72,12 +72,13 @@ web_modules/
 # Yarn Integrity file
 .yarn-integrity
 
-# dotenv environment variable files
+# Environment Variables
 .env
+.env.local
 .env.development.local
 .env.test.local
 .env.production.local
-.env.local
+.env.production
 
 # parcel-bundler cache (https://parceljs.org/)
 .cache
