--- a/.gitignore
+++ b/.gitignore
@@ -80,6 +80,7 @@ web_modules/
 .env.production.local
 .env.production
 
+
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
@@ -137,3 +138,6 @@ dist
 .pnp.*
 .DS_Store
 .vercel
+.env*
+.env*
+.env*
