--- a/package.json
+++ b/package.json
@@ -117,6 +117,7 @@
     "usehooks-ts": "^3.1.1",
     "uuid": "^9.0.1",
     "vaul": "^1.1.2",
+    "vercel": "^41.3.2",
     "zod": "^3.22.4",
     "zustand": "^5.0.3"
   },
