dashboard -delete user

--- a/.env.production.example
+++ b/.env.production.example
@@ -16,6 +16,7 @@ ENABLE_REMOTE_LOGGING=false
 # Supabase Configuration - Required for authentication and vector search
 NEXT_PUBLIC_SUPABASE_URL="your-supabase-project-url"
 NEXT_PUBLIC_SUPABASE_ANON_KEY="your-supabase-anon-key"
+SUPABASE_KEY="your-supabase-service-role-key"
 
 # Production Configuration
 NODE_ENV="production"
