--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,7 @@ ENABLE_REMOTE_LOGGING=false
 # Supabase Configuration - Required for authentication and vector search
 NEXT_PUBLIC_SUPABASE_URL="https://your-project-id.supabase.co"
 NEXT_PUBLIC_SUPABASE_ANON_KEY="your-supabase-anon-key"
+SUPABASE_KEY="your-supabase-service-role-key"
 SUPABASE_SERVICE_ROLE_KEY="your-supabase-service-role-key" # Only needed for setup script
 
 # Optional Configuration
