router, errors fixed, pre CORS

--- a/package.json
+++ b/package.json
@@ -128,6 +128,7 @@
   "devDependencies": {
     "@eslint/config-array": "^0.19.2",
     "@eslint/object-schema": "^2.1.6",
+    "@next/bundle-analyzer": "^15.2.3",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
