puppeteer webhook and auth

--- a/.env.example
+++ b/.env.example
@@ -29,3 +29,6 @@ DEFAULT_AGENT="default" # The default agent to use (default, copywriting, google
 ENABLE_DEEP_SEARCH=true # Enable or disable deep search by default
 MAX_DOCUMENTS=10 # Maximum number of documents to retrieve in RAG
 SIMILARITY_THRESHOLD=0.5 # Minimum similarity threshold for RAG
+
+# Web Scraping Configuration
+SCRAPER_ENDPOINT=your-scraper-endpoint-here
