--- a/.env.production.example
+++ b/.env.production.example
@@ -30,3 +30,6 @@ DEFAULT_AGENT="default"
 ENABLE_DEEP_SEARCH=true
 MAX_DOCUMENTS=10
 SIMILARITY_THRESHOLD=0.5 
+
+# Web Scraping Configuration
+SCRAPER_ENDPOINT=your-scraper-endpoint-here
