--- a/.env.test
+++ b/.env.test
@@ -3,3 +3,6 @@ SUPABASE_KEY=your-supabase-anon-key
 
 # OpenAI API Key for embeddings
 OPENAI_API_KEY=your-openai-api-key 
+
+# Web Scraping Configuration
+SCRAPER_ENDPOINT=your-scraper-endpoint-here
