--- a/package.json
+++ b/package.json
@@ -17,10 +17,7 @@
     "supabase": "npx supabase",
     "setup-supabase": "node scripts/setup-supabase.js",
     "deploy": "node scripts/deploy-vercel.js",
-    "test:deep-search": "tsx lib/agents/tools/perplexity/test-deep-search.ts",
-    "test:perplexity": "tsx lib/agents/tools/perplexity/test-deep-search-simple.ts",
-    "test:tools": "tsx lib/agents/tools/test-tools.ts",
-    "test:perplexity-direct": "tsx lib/agents/tools/direct-perplexity-test.ts",
+    "test:perplexity": "tsx scripts/tests/perplexity.test.ts",
     "test:website-summarizer": "tsx scripts/tests/website-summarizer.test.ts",
     "test:profile-summary": "tsx scripts/tests/test-profile-summary.ts",
     "setup:first-admin": "node scripts/setup/setup-first-admin.js",
@@ -88,6 +85,7 @@
     "input-otp": "^1.4.2",
     "loglevel": "^1.9.2",
     "loglevel-plugin-remote": "^0.6.8",
+    "lru-cache": "^11.0.2",
     "lucide-react": "^0.477.0",
     "next": "15.2.0",
     "next-themes": "^0.4.4",
