--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@tailwindcss/typography": "^0.5.16",
     "@tanstack/react-query": "^5.67.3",
     "@tanstack/react-table": "^8.21.2",
+    "@upstash/redis": "^1.34.6",
     "ai": "^4.1.50",
     "axios": "^1.8.1",
     "cheerio": "^1.0.0",
