--- a/.env.production.example
+++ b/.env.production.example
@@ -33,3 +33,12 @@ SIMILARITY_THRESHOLD=0.5
 
 # Web Scraping Configuration
 SCRAPER_ENDPOINT=your-scraper-endpoint-here
+
+# Redis Configuration
+REDIS_URL="URL"
+   
+# KV (Key-Value) specific configurations
+KV_URL="URL"
+KV_REST_API_URL="URL"
+KV_REST_API_TOKEN="your-write-token"
+KV_REST_API_READ_ONLY_TOKEN="your-read-only-token"
