perplexity env and lint

--- a/vercel.json
+++ b/vercel.json
@@ -30,6 +30,10 @@
     }
   ],
   "env": {
-    "NODE_ENV": "production"
+    "NODE_ENV": "production",
+    "PERPLEXITY_API_KEY": "@perplexity_api_key",
+    "OPENAI_API_KEY": "@openai_api_key",
+    "NEXT_PUBLIC_SUPABASE_URL": "@next_public_supabase_url",
+    "NEXT_PUBLIC_SUPABASE_ANON_KEY": "@next_public_supabase_anon_key"
   }
 } 
