--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,11 @@ NEXT_PUBLIC_SUPABASE_ANON_KEY="your-supabase-anon-key"
 SUPABASE_KEY="your-supabase-service-role-key"
 SUPABASE_SERVICE_ROLE_KEY="your-supabase-service-role-key" # Only needed for setup script
 
+# Widget Configuration
+WIDGET_ALLOWED_ORIGINS=https://programs.thehighrollersclub.io,https://example.com
+WIDGET_RATE_LIMIT=3
+WIDGET_RATE_LIMIT_WINDOW=60000
+
 # Optional Configuration
 NODE_ENV="development"  # Set to "production" for production deployment
 VERCEL_REGION="local"   # Set to your Vercel region for production deployment
