--- a/vercel.json
+++ b/vercel.json
@@ -33,7 +33,7 @@
       "headers": [
         {
           "key": "Access-Control-Allow-Origin",
-          "value": "${env.WIDGET_ALLOWED_ORIGINS}"
+          "value": "*"
         },
         {
           "key": "Access-Control-Allow-Methods",
@@ -84,6 +84,40 @@
         {
           "key": "Access-Control-Allow-Origin",
           "value": "*"
+        },
+        {
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Max-Age",
+          "value": "86400"
+        }
+      ]
+    },
+    {
+      "source": "/widget-test.html",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/html; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600"
+        }
+      ]
+    },
+    {
+      "source": "/widget-embed.html",
+      "headers": [
+        {
+          "key": "Content-Type",
+          "value": "text/html; charset=utf-8"
+        },
+        {
+          "key": "Cache-Control",
+          "value": "public, max-age=3600"
         }
       ]
     }
