--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "node scripts/dev.js",
+    "prebuild": "tsc --noEmit",
     "build": "next build",
     "postbuild": "npm run build:widget && echo 'Widget built to: public/widget/chat-widget.js'",
     "start": "next start",
@@ -15,7 +16,10 @@
     "deploy": "node scripts/deploy-vercel.js",
     "test:perplexity": "tsx scripts/tests/perplexity.test.ts",
     "setup:first-admin": "node scripts/setup/setup-first-admin.js",
-    "build:widget": "esbuild lib/widget/widget-script.js --bundle --minify --outfile=public/widget/chat-widget.js --sourcemap"
+    "build:widget": "esbuild lib/widget/widget-script.js --bundle --minify --outfile=public/widget/chat-widget.js --sourcemap",
+    "prepare": "husky && husky install",
+    "type-check": "tsc --noEmit",
+    "type-check:watch": "node scripts/type-check.js"
   },
   "dependencies": {
     "@ai-sdk/fireworks": "^0.1.12",
@@ -121,7 +125,9 @@
     "@eslint/config-array": "^0.19.2",
     "@eslint/object-schema": "^2.1.6",
     "@next/bundle-analyzer": "^15.2.3",
+    "@radix-ui/react-icons": "^1.3.2",
     "@types/node": "^20",
+    "@types/papaparse": "^5.3.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/uuid": "^9.0.7",
@@ -129,6 +135,8 @@
     "eslint": "^8",
     "eslint-config-next": "15.2.0",
     "glob": "^11.0.1",
+    "husky": "^8.0.0",
+    "lint-staged": "^15.5.0",
     "open-cli": "^8.0.0",
     "postcss": "^8",
     "rimraf": "^6.0.1",
