match other pages

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dev": "node scripts/dev.js",
     "prebuild": "tsc --noEmit",
     "build": "next build",
-    "postbuild": "npm run build:widget && echo 'Widget built to: public/widget/chat-widget.js'",
+    "postbuild": "echo 'Widget functionality handled by Next.js routes'",
     "start": "next start",
     "lint": "next lint",
     "update-imports": "node scripts/update-imports.js",
@@ -16,7 +16,6 @@
     "deploy": "node scripts/deploy-vercel.js",
     "test:perplexity": "tsx scripts/tests/perplexity.test.ts",
     "setup:first-admin": "node scripts/setup/setup-first-admin.js",
-    "build:widget": "esbuild lib/widget/widget-script.js --bundle --minify --outfile=public/widget/chat-widget.js --sourcemap",
     "prepare": "husky && husky install",
     "type-check": "tsc --noEmit",
     "type-check:watch": "node scripts/type-check.js",
