--- a/package.json
+++ b/package.json
@@ -112,6 +112,7 @@
     "sonner": "^2.0.1",
     "tailwind-merge": "^2.1.0",
     "tailwindcss-animate": "^1.0.7",
+    "typescript": "^5.8.2",
     "usehooks-ts": "^3.1.1",
     "uuid": "^9.0.1",
     "vaul": "^1.1.2",
@@ -141,7 +142,6 @@
     "stylelint-config-standard": "^37.0.0",
     "supabase": "^2.15.8",
     "tailwindcss": "^3.3.0",
-    "tsx": "^4.19.3",
-    "typescript": "^5"
+    "tsx": "^4.19.3"
   }
 }
