--- a/package.json
+++ b/package.json
@@ -110,6 +110,7 @@
     "react-hook-form": "^7.54.2",
     "react-markdown": "^10.0.1",
     "react-resizable-panels": "^2.1.7",
+    "react-virtuoso": "^4.12.6",
     "recharts": "^2.15.1",
     "remark-gfm": "^4.0.1",
     "sonner": "^2.0.1",
