--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "drizzle-orm": "^0.40.0",
     "embla-carousel-react": "^8.5.2",
     "framer-motion": "^12.4.10",
+    "geist": "^1.3.1",
     "input-otp": "^1.4.2",
     "loglevel": "^1.9.2",
     "loglevel-plugin-remote": "^0.6.8",
