--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
     "classnames": "^2.5.1",
     "clsx": "^2.0.0",
     "cmdk": "^1.0.4",
+    "cockatiel": "^3.2.1",
     "codemirror": "^6.0.1",
     "date-fns": "^4.1.0",
     "dotenv": "^16.4.7",
