--- a/package.json
+++ b/package.json
@@ -129,6 +129,7 @@
   "devDependencies": {
     "@eslint/config-array": "^0.19.2",
     "@eslint/object-schema": "^2.1.6",
+    "@jest/globals": "^29.7.0",
     "@next/bundle-analyzer": "^15.2.3",
     "@radix-ui/react-icons": "^1.3.2",
     "@types/node": "^20",
@@ -143,6 +144,7 @@
     "glob": "^11.0.1",
     "husky": "^8.0.0",
     "lint-staged": "^15.5.0",
+    "node-mocks-http": "^1.16.2",
     "open-cli": "^8.0.0",
     "postcss": "^8",
     "rimraf": "^6.0.1",
