phase 3 complete, testing troubles

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,10 @@
     "jsx": "preserve",
     "incremental": true,
     "allowSyntheticDefaultImports": true,
+    "types": [
+      "node",
+      "vitest/globals"
+    ],
     "plugins": [
       {
         "name": "next"
